Stock availability and stock advice end-points implemented to use needed schemas and unit tested.